--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "christian-kohler.npm-intellisense",
     "redhat.vscode-yaml",
     "formulahendry.auto-complete-tag",
-    "syler.sass-indented"
+    "syler.sass-indented",
+    "github.vscode-github-actions"
   ]
 }
