--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oganesyanu",
+  "name": "fast-track",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,10 +18,12 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.7"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
